--- a/requirements-backend.txt
+++ b/requirements-backend.txt
@@ -11,7 +11,7 @@ python-multipart>=0.0.6,<0.0.7
 requests>=2.31.0,<2.32.0
 openai>=1.0.0,<2.0.0
 python-dotenv>=1.0.0,<1.1.0
-asyncpg>=0.27.0,<0.28.0
+#asyncpg>=0.27.0,<0.28.0
 redis>=4.6.0,<4.7.0
 httpx>=0.24.1,<0.25.0
 tenacity>=8.2.3,<8.3.0
